# mirakurun2xmltv

./: .env.example  .gitignore  Dockerfile  README.md  dev.py  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: main.py
app/controllers/epgparser/: __init__.py
app/controllers/jpepgtools/episode/: __init__.py
app/controllers/jpepgtools/tags/title/: __init__.py
app/controllers/jpepgtools/title_separator/: __init__.py
app/controllers/tmdb/show_data/: __init__.py
app/controllers/xmltv2tmdb/: __init__.py
app/routers/: __init__.py  epg.py
